Implementing Game Class

--- a/SGGameDistribution.csproj
+++ b/SGGameDistribution.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Components\FeatureController.cs" />
+    <Compile Include="Components\Game.cs" />
     <Compile Include="Data\DataProvider.cs" />
     <Compile Include="SGGameDistributionModuleBase.cs">
       <SubType>ASPXCodeBehind</SubType>
