Adding Content to object + Backup Commit

--- a/SGGameDistribution.csproj
+++ b/SGGameDistribution.csproj
@@ -68,6 +68,8 @@
     <Compile Include="Components\FeatureController.cs" />
     <Compile Include="Components\Game.cs" />
     <Compile Include="Components\GameController.cs" />
+    <Compile Include="Components\Taxonomy\Content.cs" />
+    <Compile Include="Components\Taxonomy\Terms.cs" />
     <Compile Include="Data\DataProvider.cs" />
     <Compile Include="SGGameDistributionModuleBase.cs">
       <SubType>ASPXCodeBehind</SubType>
