--- a/SGGameDistribution.csproj
+++ b/SGGameDistribution.csproj
@@ -113,6 +113,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Edit.ascx" />
+    <Content Include="images\placeholder.png" />
     <Content Include="License.txt" />
     <Content Include="module.css" />
     <Content Include="ReleaseNotes.txt" />
